--- a/.github/workflows/gameday.yml
+++ b/.github/workflows/gameday.yml
@@ -11,11 +11,14 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - name: Install deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install python-dotenv requests duckdb
+- name: Install MINIMAL deps (fetch only)
+  run: |
+    python -m pip install --upgrade pip
+    pip install pandas pyarrow requests duckdb python-dotenv nfl_data_py
+
+- name: Ensure cache folder
+  run: mkdir -p cache
+
       - name: Refresh odds & schedule
         env:
           THE_ODDS_API_KEY: ${{ secrets.THE_ODDS_API_KEY }}
