--- a/.github/workflows/gameday.yml
+++ b/.github/workflows/gameday.yml
@@ -1,33 +1,40 @@
-﻿name: Gameday Hourly
+name: Gameday Hourly
 on:
   schedule:
     - cron: "0 * * * 0,1"  # hourly Sun/Mon UTC
   workflow_dispatch:
+
 jobs:
   gameday:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-- name: Install MINIMAL deps (fetch only)
-  run: |
-    python -m pip install --upgrade pip
-    pip install pandas pyarrow requests duckdb python-dotenv nfl_data_py
 
-- name: Ensure cache folder
-  run: mkdir -p cache
+      - name: Install MINIMAL deps (fetch only)
+        run: |
+          python -m pip install --upgrade pip
+          pip install pandas pyarrow requests duckdb python-dotenv nfl_data_py
+
+      - name: Ensure cache folder
+        run: mkdir -p cache
 
       - name: Refresh odds & schedule
         env:
           THE_ODDS_API_KEY: ${{ secrets.THE_ODDS_API_KEY }}
-          NWS_USER_AGENT: ${{ secrets_NWS_USER_AGENT }}
+          NWS_USER_AGENT: ${{ secrets.NWS_USER_AGENT }}
           DATA_CACHE_DIR: ./cache
         run: |
           python scripts/fetch_and_build.py
-      - name: Upload cache
+
+      - name: Upload cache (warn if empty)
         uses: actions/upload-artifact@v4
         with:
           name: gameday_picks
           path: cache/**
+          if-no-files-found: warn
