--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,7 +1,7 @@
 name: Daily Data Refresh
 on:
   schedule:
-    - cron: "0 13 * * *"   # 09:00 ET
+    - cron: "0 13 * * *"   # 09:00 ET daily
   workflow_dispatch:
 
 jobs:
@@ -31,6 +31,15 @@ jobs:
           DATA_CACHE_DIR: ./cache
         run: |
           python scripts/fetch_and_build.py
+
+      - name: Build pick sheet
+        env:
+          DATA_CACHE_DIR: ./cache
+        run: |
+          python - << "PY"
+          from nfl_model.pipeline import build_pick_sheet
+          build_pick_sheet("./cache")
+          PY
 
       - name: Upload cache (warn if empty)
         uses: actions/upload-artifact@v4
