--- a/.github/workflows/gameday.yml
+++ b/.github/workflows/gameday.yml
@@ -27,7 +27,8 @@ jobs:
       - name: Refresh odds & schedule
         env:
           THE_ODDS_API_KEY: ${{ secrets.THE_ODDS_API_KEY }}
-          NWS_USER_AGENT: ${{ secrets[NWS_USER_AGENT] }}
+          NWS_USER_AGENT: ${{ secrets.NWS_USER_AGENT }}
+
           DATA_CACHE_DIR: ./cache
         run: |
           python scripts/fetch_and_build.py
